--- a/dataset_viewer/.env.example
+++ b/dataset_viewer/.env.example
@@ -1,3 +1,14 @@
-# 复制为 .env 后修改
-# 数据集根目录（必须包含 run/episode/images 结构）
-DATA_ROOT=/data
+# 数据集标注平台 - 环境变量示例
+# 复制为 .env 并填写实际值，.env 勿提交到 git
+
+# JWT 密钥，生产环境必须改为随机字符串（openssl rand -hex 32）
+JWT_SECRET=dataset-annotation-secret
+
+# 数据集根目录。本地开发：通常为 ../dataset（与 dataset_viewer 同级的 dataset）；Docker 挂载 /data
+DATA_ROOT=../dataset
+
+# 可选：PostgreSQL 连接串（用于图库索引）
+# DATABASE_URL=postgresql://user:pass@host:5432/annot_db
+
+# MongoDB 连接串（本地开发用 docker compose -f docker-compose.dev.yml up -d 启动 mongo）
+MONGODB_URI=mongodb://localhost:27017
